--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="linkcontainer">
         <div id="branding">
-            <a href="index.html"><span class="logo"><img src="images/Logo.png" alt="Logo" width= 100 height= 100></span></a>
+            <a href="index.html"><span class="logo"><img src="Logo.png" alt="Logo" width= 100 height= 100></span></a>
     </div>
     <nav>
         <ul>
@@ -43,20 +43,20 @@
 </div>
 
 <div class="box">
-<a href="calendar.html"><img src="images/iconmonstr-calendar-7-240.png" alt="Calendar" width= 100 height= 100> <div>Calendar</div></a>
+<a href="calendar.html"><img src="iconmonstr-calendar-7-240.png" alt="Calendar" width= 100 height= 100> <div>Calendar</div></a>
 </div>
 
 
 <div class="box">
-<a href="studentinfo.html"><img src="images/iconmonstr-info-lined-240.png" alt="Information" width= 100 height= 100> <div>Student Information </div> </a>
+<a href="studentinfo.html"><img src="iconmonstr-info-lined-240.png" alt="Information" width= 100 height= 100> <div>Student Information </div> </a>
 </div>
 
 <div class="box">
-<a href="forum.html"><img src="images/iconmonstr-speech-bubble-33-240.png" alt="Forum" width= 100 height= 100><div>Forum</div></a>
+<a href="forum.html"><img src="iconmonstr-speech-bubble-33-240.png" alt="Forum" width= 100 height= 100><div>Forum</div></a>
 </div>
 
 <div class="box">
-    <a href="feedback.html"><img src="images/iconmonstr-thumb-14-240.png" alt="Thumbs Up" width= 100 height= 100> <div>Feedback</div></a>
+    <a href="feedback.html"><img src="iconmonstr-thumb-14-240.png" alt="Thumbs Up" width= 100 height= 100> <div>Feedback</div></a>
 </div>
     
 </section>
@@ -77,7 +77,7 @@
             Whether you're a high school student preparing for exams, an undergraduate navigating university coursework, a graduate student delving into specialized fields, or just a curious learner, AcademicNexus is here to accompany you on your academic journey.
 
         </p>
-        <img src="images/Girl-Studying.jpeg" alt="Girl Studying" width="300">
+        <img src="Girl-Studying.jpeg" alt="Girl Studying" width="300">
     </div>
     <h3><u>Our Team </u> </h3>
     <div class="abt-img-box">
@@ -89,7 +89,7 @@
             <br>
             Our shared goal is to empower students with a reliable and intuitive platform, simplifying their educational journey while promoting a dynamic and enriching learning experience through AcademicNexus.
         </p>
-        <img src="images/Students-.jpg" alt="Diverse Students Toghether." width="300">
+        <img src="Students-.jpg" alt="Diverse Students Toghether." width="300">
     </div>
     <h3> <u>Get Involved </u> </h3>
     <div class="abt-img-box">
@@ -102,7 +102,7 @@
 
 
         </p>
-        <img src="images/GetInvolved.jpg" alt="Students Discussing " width="300">
+        <img src="GetInvolved.jpg" alt="Students Discussing " width="300">
     </div>
 </div>
 
