--- a/feedback.html
+++ b/feedback.html
@@ -10,7 +10,7 @@
 <header>
     <div class="linkcontainer">
         <div id="branding">
-            <a href="index.html"><span class="logo"><img src="images/Logo.png" alt="Logo" width= 100 height= 100></span></a>
+            <a href="index.html"><span class="logo"><img src="Logo.png" alt="Logo" width= 100 height= 100></span></a>
     </div>
     <nav>
         <ul>
